manifests/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-llama2
  name: k8s-llama2-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 7860
  selector:
    app: k8s-llama2
  sessionAffinity: None
  type: ClusterIP
